--- a/index.html
+++ b/index.html
@@ -155,18 +155,18 @@ select {
 const animals = ["Rat","Ox","Tiger","Rabbit","Dragon","Snake","Horse","Goat","Monkey","Rooster","Dog","Pig"];
 const elements = ["Wood","Fire","Earth","Metal","Water"];
 const zodiacYears = {
-  "Rat": { "Wood":[1924,1984,2044,1904], "Fire":[1936,1996,2056,1906], "Earth":[1948,2008,2068,1918], "Metal":[1960,2020,2080,1920], "Water":[1912,1972,2032,1882] },
-  "Ox": { "Wood":[1925,1985,2045,1905], "Fire":[1937,1997,2057,1907], "Earth":[1949,2009,2069,1919], "Metal":[1961,2021,2081,1921], "Water":[1913,1973,2033,1883] },
-  "Tiger": { "Wood":[1926,1986,2046,1906], "Fire":[1938,1998,2058,1908], "Earth":[1950,2010,2070,1920], "Metal":[1962,2022,2082,1922], "Water":[1914,1974,2034,1884] },
-  "Rabbit": { "Wood":[1927,1987,2047,1907], "Fire":[1939,1999,2059,1909], "Earth":[1951,2011,2071,1921], "Metal":[1963,2023,2083,1923], "Water":[1915,1975,2035,1885] },
-  "Dragon": { "Wood":[1928,1988,2048,1908], "Fire":[1940,2000,2060,1910], "Earth":[1952,2012,2072,1922], "Metal":[1964,2024,2084,1924], "Water":[1916,1976,2036,1886] },
-  "Snake": { "Wood":[1929,1989,2049,1909], "Fire":[1941,2001,2061,1911], "Earth":[1953,2013,2073,1923], "Metal":[1965,2025,2085,1925], "Water":[1917,1977,2037,1887] },
-  "Horse": { "Wood":[1930,1990,2050,1910], "Fire":[1942,2002,2062,1912], "Earth":[1954,2014,2074,1924], "Metal":[1966,2026,2086,1926], "Water":[1918,1978,2038,1888] },
-  "Goat": { "Wood":[1931,1991,2051,1911], "Fire":[1943,2003,2063,1913], "Earth":[1955,2015,2075,1925], "Metal":[1967,2027,2087,1927], "Water":[1919,1979,2039,1889] },
-  "Monkey": { "Wood":[1932,1992,2052,1912], "Fire":[1944,2004,2064,1914], "Earth":[1956,2016,2076,1926], "Metal":[1968,2028,2088,1928], "Water":[1920,1980,2040,1890] },
-  "Rooster": { "Wood":[1933,1993,2053,1913], "Fire":[1945,2005,2065,1915], "Earth":[1957,2017,2077,1927], "Metal":[1969,2029,2089,1929], "Water":[1921,1981,2041,1891] },
-  "Dog": { "Wood":[1934,1994,2054,1914], "Fire":[1946,2006,2066,1916], "Earth":[1958,2018,2078,1928], "Metal":[1970,2030,2090,1930], "Water":[1922,1982,2042,1892] },
-  "Pig": { "Wood":[1935,1995,2055,1915], "Fire":[1947,2007,2067,1917], "Earth":[1959,2019,2079,1929], "Metal":[1971,2031,2091,1931], "Water":[1923,1983,2043,1893] },
+"Rat": { "Wood":[1924,1984,2044], "Fire":[1936,1996,2056], "Earth":[1948,2008,2068], "Metal":[1960,2020,2080], "Water":[1912,1972,2032] },
+"Ox": { "Wood":[1925,1985,2045], "Fire":[1937,1997,2057], "Earth":[1949,2009,2069], "Metal":[1961,2021,2081], "Water":[1913,1973,2033] },
+"Tiger": { "Wood":[1926,1986,2046], "Fire":[1938,1998,2058], "Earth":[1950,2010,2070], "Metal":[1962,2022,2082], "Water":[1914,1974,2034] },
+"Rabbit": { "Wood":[1927,1987,2047], "Fire":[1939,1999,2059], "Earth":[1951,2011,2071], "Metal":[1963,2023,2083], "Water":[1915,1975,2035] },
+"Dragon": { "Wood":[1928,1988,2048], "Fire":[1940,2000,2060], "Earth":[1952,2012,2072], "Metal":[1964,2024,2084], "Water":[1916,1976,2036] },
+"Snake": { "Wood":[1929,1989,2049], "Fire":[1941,2001,2061], "Earth":[1953,2013,2073], "Metal":[1965,2025,2085], "Water":[1917,1977,2037] },
+"Horse": { "Wood":[1930,1990,2050], "Fire":[1942,2002,2062], "Earth":[1954,2014,2074], "Metal":[1966,2026,2086], "Water":[1918,1978,2038] },
+"Goat": { "Wood":[1931,1991,2051], "Fire":[1943,2003,2063], "Earth":[1955,2015,2075], "Metal":[1967,2027,2087], "Water":[1919,1979,2039] },
+"Monkey": { "Wood":[1932,1992,2052], "Fire":[1944,2004,2064], "Earth":[1956,2016,2076], "Metal":[1968,2028,2088], "Water":[1920,1980,2040] },
+"Rooster": { "Wood":[1933,1993,2053], "Fire":[1945,2005,2065], "Earth":[1957,2017,2077], "Metal":[1969,2029,2089], "Water":[1921,1981,2041] },
+"Dog": { "Wood":[1934,1994,2054], "Fire":[1946,2006,2066], "Earth":[1958,2018,2078], "Metal":[1970,2030,2090], "Water":[1922,1982,2042] },
+"Pig": { "Wood":[1935,1995,2055], "Fire":[1947,2007,2067], "Earth":[1959,2019,2079], "Metal":[1971,2031,2091], "Water":[1923,1983,2043] }
 };
 
 // ------------------ FUNCTIONS ------------------
