--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style>
 body {
   text-align:center;
-  font-family:sans-serif;
+  font-family:Century Gothic;
   background:#FFD6D7;
   color:#fff;
   margin:0;
@@ -30,7 +30,7 @@ select {
 
 /* Spin button */
 #spinButton {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'FiraSans', Century Gothic;
   font-weight: 700;
   background: #b12424;
   color: #ffffff;
@@ -104,7 +104,7 @@ select {
 /* Zodiac details */
 #details {
   margin-top:30px;
-  font-family:'Rubik', sans-serif;
+  font-family:'FiraSans', Century Gothic;
   font-size:18px;
   color:#382b22;
   max-width:350px;
