--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 /* ---------------- BODY & GENERAL ---------------- */
 body {
   text-align: center;
-  font-family: 'Protest Revolution', cursive;
+  font-family: 'Rubik', sans-serif;
   background: #ffe6e9;
   color: #fff;
   margin: 0;
@@ -38,7 +38,7 @@ select {
 /* ---------------- SPIN BUTTON ---------------- */
 #spinButton {
   position: relative;
-  font-family: 'Protest Revolution', cursive;
+  font-family: 'Rubik', sans-serif;
   font-weight: 600;
   color: #382b22;
   text-transform: uppercase;
