--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 /* ---------------- BODY & GENERAL ---------------- */
 body {
   text-align: center;
-  font-family: 'Rubik', sans-serif;
+font-family: "Diphylleia", serif;
   background: #ffe6e9;
   color: #fff;
   margin: 0;
@@ -38,7 +38,7 @@ select {
 /* ---------------- SPIN BUTTON ---------------- */
 #spinButton {
   position: relative;
-  font-family: 'Rubik', sans-serif;
+font-family: "Diphylleia", serif;
   font-weight: 600;
   color: #382b22;
   text-transform: uppercase;
@@ -120,7 +120,7 @@ select {
 
 /* ---------------- ZODIAC DETAILS ---------------- */
 #details {
-  margin:30px auto 0; font-family:'Allura', cursive; font-size:18px;
+  margin:30px auto 0; font-family: "Diphylleia", serif; font-size:18px;
   color:#382b22; max-width:350px; text-align:left; white-space:pre-wrap;
   background:#fff; padding:20px; border:2px solid #be3838; display:none;
   max-height:220px; overflow:auto; box-sizing:border-box; animation:popUp 0.6s ease-out;
