--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ select {
 
 <!-- Lanterns wrap the whole dropdown + button -->
 <div class="lantern-wrapper">
-  <img src="images/lantern.png" class="lantern" alt="Lantern">
+  <img src="images/Lantern.png" class="lantern" alt="Lantern">
   
   <div class="dropdown-button-column">
     <div class="dropdowns">
@@ -160,7 +160,7 @@ select {
     <button id="spinButton" onclick="startSpin()"><span class="gold">Get My Zodiac!</span></button>
   </div>
 
-  <img src="images/lantern.png" class="lantern" alt="Lantern">
+  <img src="images/Lantern.png" class="lantern" alt="Lantern">
 </div>
 
 <br>
