--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
   min-width: 90px;
   padding: 0.5em 1em;
   background: #972525;
-  color: #fff;
+  color: #ffe6e9;
   margin-right: 4px;
   cursor: pointer;
   font-weight: bold;
@@ -129,13 +129,13 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
   z-index: 1;
 }
 .tabs-section [type="radio"]:checked + label { background: #be3838; }
-.tabs-section [type="radio"]:checked + label:after { background: #fff; z-index: 2; }
+.tabs-section [type="radio"]:checked + label:after { background: #ffffff; z-index: 2; }
 .tabs-section [type="radio"]:checked + label span { color: #be3838; z-index: 3; }
 .tabs-content {
   position: relative;
   border: 2.5px solid #000;
   border-radius: 5px;
-  background: rgba(255, 255, 255, 0.85); /* semi-transparent */
+  background: #ffffff;
   color: #000;
   padding: 15px;
   min-height: 200px;
@@ -143,7 +143,7 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
-  margin-top: -5px; /* allows tabs to overlay */
+  margin-top: -4px; /* allows tabs to overlay */
   backdrop-filter: blur(3px); /* optional frosted effect */
 }
 
@@ -349,5 +349,3 @@ originalReelsHTML=document.getElementById("reels").innerHTML;
 </script>
 </body>
 </html>
-
-
