--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
 .tabs-section [type="radio"] { display: none; }
 .tabs-section label {
   display: inline-block;
-  min-width: 90px;
-  padding: 0.5em 1em;
+  padding: 0.5em 1em;   /* auto size based on text */
   background: #972525;
   color: #ffe6e9;
   margin-right: 4px;
@@ -114,6 +113,7 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
   border-radius: 0.5em;
   position: relative;
   border: 1.5px solid #000;
+  white-space: nowrap;   /* prevent text wrap */
 }
 .tabs-section label span { position: relative; z-index: 3; }
 .tabs-section label:after {
@@ -125,7 +125,7 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
   background: #be3838;
   border: 1.5px solid #000;
   border-bottom: none;
-  transform: perspective(120px) rotateX(18deg); /* fixed 3D effect */
+  transform: perspective(120px) rotateX(18deg);
   z-index: 1;
 }
 .tabs-section [type="radio"]:checked + label { background: #be3838; }
@@ -143,7 +143,7 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
-  margin-top: -8px; /* allows tabs to overlay */
+  margin-top: -4px;
 }
 
 /* ---------------- SCROLLBAR ---------------- */
@@ -241,7 +241,7 @@ const famousPeople = {
   Pig:["Barbra Streisand: born on April 24, 1942, a Water Pig 豬","Henry Cavill: born on May 5, 1983, a Water Pig 豬","Cristiano Ronaldo: born on February 5, 1985, a Wood Pig 豬","Jackie Chan: born on April 7, 1954, a Wood Pig 豬","Bad Bunny: born on March 10, 1994, a Wood Pig 豬","Daniel Radcliffe: born on July 23, 1989, an Earth Pig 豬","Lucy Liu: born on December 2, 1968, an Earth Pig 豬"]
 };
 
-// ---------------- INIT DROPDOWNS ----------------
+/* ---------------- INIT DROPDOWNS ---------------- */
 function initBirthdayDropdowns(){
   const month=document.getElementById("month"), day=document.getElementById("day"), year=document.getElementById("year");
   ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"].forEach((m,i)=>month.add(new Option(m,i+1)));
@@ -250,7 +250,7 @@ function initBirthdayDropdowns(){
   for(let y=currentYear; y>=currentYear-80; y--) year.add(new Option(y,y));
 }
 
-// ---------------- ZODIAC CALC ----------------
+/* ---------------- ZODIAC CALC ---------------- */
 function getUserZodiacFromDropdown(){
   const y=parseInt(document.getElementById("year").value);
   return {animal: animals[(y-4)%12], element: elements[Math.floor(((y-4)%10)/2)], year: y};
@@ -348,8 +348,3 @@ originalReelsHTML=document.getElementById("reels").innerHTML;
 </script>
 </body>
 </html>
-
-
-
-
-
