--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ select { padding: 10px; font-size: 16px; margin: 5px; }
       <label for="tab3"><span>Famous People</span></label>
 
       <div class="tabs-content">
-        <section id="general"></section>
-        <section id="story"></section>
-        <section id="famous"></section>
+        <section id="General"></section>
+        <section id="Story"></section>
+        <section id="Famous"></section>
       </div>
     </section>
   </div>
